--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "type": "image/png"
     },
     {
-      "src": "./src/assets/icon-512.png",
+      "src": "src/assets/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
